fixed top nav clipping finally

--- a/assets/themes/lab/css/style.scss
+++ b/assets/themes/lab/css/style.scss
@@ -94,8 +94,8 @@ strong {
 // logo
 
 .logo {
-	width: 60px;
-	height: 60px;
+	width: 50px;
+	height: 50px;
 	padding: 5px;
 }
 
